--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "jsx": "react-jsx",
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
-    "paths": {
+     "paths": {
+      "@shared/*": ["app/shared/*"],
       "~/*": ["./app/*"]
     },
     "esModuleInterop": true,
