--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
 	"printWidth": 100,
-	"tabWidth": 4,
+	"tabWidth": 2,
 	"useTabs": true,
 	"semi": true,
 	"singleQuote": true,
@@ -8,6 +8,5 @@
 	"bracketSpacing": true,
 	"jsxSingleQuote": false,
 	"arrowParens": "always",
-	"endOfLine": "lf",
-	"plugins": ["prettier-plugin-tailwindcss"]
+	"endOfLine": "lf"
 }
