fixing vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "rewrites": [
-    { "source": "/((?!api).*)", "destination": "/index.html" }
-  ]
-}</content>
-</xai:function_call">  
-<xai:function_call name="bash">
-<parameter name="command">git add vercel.json
+	"rewrites": [
+		{
+			"source": "/(.*)",
+			"destination": "/index.html"
+		}
+	]
+}
