--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react": "^19.0.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
+		"react-helmet-async": "^2.0.5",
 		"react-hook-form": "^7.54.2",
 		"react-i18next": "^15.5.1",
 		"react-resizable-panels": "^2.1.7",
